D8-148 Prevent footer from collapsing in IE 11

--- a/css/layout.css
+++ b/css/layout.css
@@ -19,3 +19,7 @@ body {
   flex-shrink: 0;
   flex-basis: auto;
 }
+
+.isu-footer {
+  flex-shrink: 0;
+}
